--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,30 +1,1 @@
-
-  <div style="text-align: center;">
-  <button  style="color:green" (click)="addingTask = true;">  Add a Task </button>
-</div> <br> <br>
-
-
-<div style="text-align: center;" *ngIf="addingTask">
-<textarea  [(ngModel)]="description" ></textarea>
-<button  style="color:green" (click)="addTask(); addingTask = false;">  Submit </button>
-</div>
-<mat-card class="example-card" *ngFor="let t of allTasks; let i = index">
-  <mat-card-header>
-    <div mat-card-avatar class="example-header-image"></div>
-    <mat-card-title>Task ID</mat-card-title>
-    <mat-card-subtitle>{{t.id}}</mat-card-subtitle>
-  </mat-card-header>
- 
-  <mat-card-content>
-    <p>
-      {{t.description}}
-      </p>
-
-      
-  </mat-card-content>
-  <mat-card-actions style="text-align: center;">
-    <button mat-button  (click)="openDialog(i)">Edit</button>
-    <button mat-button (click)="deleteTask(i)">Delete</button>
-  </mat-card-actions>
-  <br><br>
-</mat-card>
+<router-outlet></router-outlet>
